--- a/activities/dockerfile
+++ b/activities/dockerfile
@@ -8,4 +8,5 @@ RUN apt-get install -y nginx
 
 
 EXPOSE 80
-ENTRYPOINT /usr/sbinnginx -g "daemon off;"
+ENTRYPOINT /usr/sbin/nginx -g "daemon off;" 
+
