--- a/activities/dockerfile
+++ b/activities/dockerfile
@@ -6,6 +6,9 @@ FROM ubuntu:18.04
 RUN apt-get update
 #RUN echo "hello1"
 RUN apt-get install -y nginx
+
+
+# tiempo de ejecucion 
 # run echo "hello2"
 EXPOSE 80
 ENTRYPOINT /usr/sbin/nginx -g "daemon off;" 
