--- a/activities2/dockerfile
+++ b/activities2/dockerfile
@@ -1,6 +1,14 @@
-FROM debian:wheezy
+#EJERCICIO FINAL
 
+# 1. Cogemos una imagen con python
+# 2. Hacemos un entregable con python
+# 3. Hacer ENTRYPOINT
+
+
+FROM debian:wheezy
 #TEORIA
 #depende el uso que le quieras dar usas CMD o ENTRPOINT
+#siempre
 ENTRYPOINT [ "/in/ping" ]
+#si no podemos nada
 CMD ["localhost"]
