--- a/ejercicio final/dockerfile
+++ b/ejercicio final/dockerfile
@@ -11,3 +11,14 @@ COPY mypi.py /
 ENTRYPOINT python mypi.py
 
 # docker run imagenpython 1 2
+
+#Construir un script en python que acepte dos números como parámetros e imprima el resultado de la suma
+##normal
+
+#Construir una imagen docker que contenga dicho python script
+##Coger una imagen que ya tenga python
+## Añadir el script dentro de la imagen
+## crear imegen
+
+#Cuando se ejecute el contendor docker, este debe invocar al script pasando como parámetro ambos números.
+## aejecutar el contendor y que ejecure el script
