--- a/ejercicio final/dockerfile
+++ b/ejercicio final/dockerfile
@@ -1,8 +1,3 @@
-#EJERCICIO FINAL
-
-# 1. Cogemos una imagen con python
-# 2. Hacemos un entregable con python
-# 3. sHacer ENTRYPOINT
 
 FROM python
 
@@ -10,6 +5,13 @@ COPY script.py /
 
 ENTRYPOINT python script.py
 
+#EJERCICIO FINAL
+# 1. Cogemos una imagen con python
+# 2. Hacemos un entregable con python
+# 3. sHacer ENTRYPOINT
+
+
+# docker build -it imagenpython
 # docker run imagenpython 1 2
 
 #Construir un script en python que acepte dos números como parámetros e imprima el resultado de la suma
